--- a/mustudio/package.json
+++ b/mustudio/package.json
@@ -3,17 +3,20 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "main": "electron/main.cjs",
+  "main": "electron-dist/main.cjs",
   "scripts": {
-    "dev": "concurrently -k \"vite\" \"wait-on tcp:5173 && electron .\"",
-    "build": "tsc && vite build",
+    "dev": "concurrently -k \"tsc -p tsconfig.electron.json --watch --preserveWatchOutput\" \"vite\" \"wait-on file:electron-dist/main.cjs tcp:5173 && electron .\"",
+    "build:electron": "tsc -p tsconfig.electron.json",
+    "build:renderer": "tsc && vite build",
+    "build": "bun run build:electron && bun run build:renderer",
     "preview": "vite preview",
-    "start": "electron ."
+    "start": "bun run build:electron && electron ."
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-store": "^0.8.0",
     "@tanstack/store": "^0.8.0",
+    "@types/sql.js": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -22,12 +25,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.0",
+    "sql.js": "^1.14.0",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "utif2": "^4.1.0",
     "zarrita": "^0.4.0"
   },
   "devDependencies": {
+    "@types/node": "^25.2.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/wicg-file-system-access": "^2023.10.7",
